--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,14 @@
 Package: pvca
-Title: What the Package Does (one line, title case)
-Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+Title: R package for principal variance component analysis
+Version: 0.1.0
+Authors@R: Donghyung Lee <dustorm@gmail.com>
+Description: R package for principal variance component analysis
 Depends: R (>= 3.3.2)
-License: What license is it under?
+Imports:
+    lme4,
+    ggplot2
+License: GPL-3
+URL: https://github.com/dleelab/pvca
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
